err/sorethumb.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PIL'...
Listing './lib/python3.5/site-packages/PIL/.libs'...
Listing './lib/python3.5/site-packages/Pillow-5.0.0.dist-info'...
Listing './lib/python3.5/site-packages/djangoexample'...
Listing './lib/python3.5/site-packages/djangoexample/thumbs'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sorethumb'...
Listing './lib/python3.5/site-packages/sorethumb/filters'...
Compiling './lib/python3.5/site-packages/sorethumb/filters/__init__.py'...
***   File "./lib/python3.5/site-packages/sorethumb/filters/__init__.py", line 31
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sorethumb/templatetags'...
Compiling './lib/python3.5/site-packages/sorethumb/templatetags/sorethumb.py'...
***   File "./lib/python3.5/site-packages/sorethumb/templatetags/sorethumb.py", line 36
    except ThumbError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sorethumb/thumbnail.py'...
***   File "./lib/python3.5/site-packages/sorethumb/thumbnail.py", line 190
    except (OSError, IOError), e:
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sorethumb-1.0.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
